fix: add wrap to homepage images container

--- a/frontend/src/components/HomepageImagesModal/HomepageImages.css
+++ b/frontend/src/components/HomepageImagesModal/HomepageImages.css
@@ -5,6 +5,7 @@
 	border-radius: 5px;
 	padding: 25px;
 	display: flex;
+	flex-wrap: wrap;
 }
 
 #homepage-image-card {
